v0.19.0/_sources/content/tutorials/03-gravity/index.rst.txt
:orphan:

Gravity
=======



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module SimPEG.potential_fields.gravity to predict gravity anomaly data for a sy...">

.. only:: html

  .. image:: /content/tutorials/03-gravity/images/thumb/sphx_glr_plot_1a_gravity_anomaly_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_03-gravity_plot_1a_gravity_anomaly.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Forward Simulation of Gravity Anomaly Data on a Tensor Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module SimPEG.potential_fields.gravity to predict gravity gradiometry data for ...">

.. only:: html

  .. image:: /content/tutorials/03-gravity/images/thumb/sphx_glr_plot_1b_gravity_gradiometry_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_03-gravity_plot_1b_gravity_gradiometry.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Forward Simulation of Gradiometry Data on a Tree Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we invert gravity anomaly data to recover a density contrast model. We formulate the inver...">

.. only:: html

  .. image:: /content/tutorials/03-gravity/images/thumb/sphx_glr_plot_inv_1a_gravity_anomaly_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_03-gravity_plot_inv_1a_gravity_anomaly.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Least-Squares Inversion of Gravity Anomaly Data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we invert gravity anomaly data to recover a density contrast model. We formulate the inver...">

.. only:: html

  .. image:: /content/tutorials/03-gravity/images/thumb/sphx_glr_plot_inv_1b_gravity_anomaly_irls_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_03-gravity_plot_inv_1b_gravity_anomaly_irls.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sparse Norm Inversion of Gravity Anomaly Data</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/tutorials/03-gravity/plot_1a_gravity_anomaly
   /content/tutorials/03-gravity/plot_1b_gravity_gradiometry
   /content/tutorials/03-gravity/plot_inv_1a_gravity_anomaly
   /content/tutorials/03-gravity/plot_inv_1b_gravity_anomaly_irls


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: 03-gravity_python.zip </content/tutorials/03-gravity/03-gravity_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: 03-gravity_jupyter.zip </content/tutorials/03-gravity/03-gravity_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
