v0.23.0/_sources/content/tutorials/03-gravity/index.rst.txt
:orphan:

Gravity
=======



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module simpeg.potential_fields.gravity to predict gravity anomaly data for a synthetic density contrast model. The simulation is carried out on a tensor mesh. For this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/03-gravity/images/thumb/sphx_glr_plot_1a_gravity_anomaly_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_03-gravity_plot_1a_gravity_anomaly.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Forward Simulation of Gravity Anomaly Data on a Tensor Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module simpeg.potential_fields.gravity to predict gravity gradiometry data for a synthetic density contrast model. The simulation is carried out on a tree mesh. For this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/03-gravity/images/thumb/sphx_glr_plot_1b_gravity_gradiometry_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_03-gravity_plot_1b_gravity_gradiometry.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Forward Simulation of Gradiometry Data on a Tree Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we invert gravity anomaly data to recover a density contrast model. We formulate the inverse problem as a least-squares optimization problem. For this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/03-gravity/images/thumb/sphx_glr_plot_inv_1a_gravity_anomaly_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_03-gravity_plot_inv_1a_gravity_anomaly.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Least-Squares Inversion of Gravity Anomaly Data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we invert gravity anomaly data to recover a density contrast model. We formulate the inverse problem as an iteratively re-weighted least-squares (IRLS) optimization problem. For this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/03-gravity/images/thumb/sphx_glr_plot_inv_1b_gravity_anomaly_irls_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_03-gravity_plot_inv_1b_gravity_anomaly_irls.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sparse Norm Inversion of Gravity Anomaly Data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we invert gravity anomaly data to recover a density contrast model. We formulate the inverse problem as an iteratively re-weighted least-squares (IRLS) optimization problem. For this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/03-gravity/images/thumb/sphx_glr_plot_inv_1c_gravity_anomaly_irls_compare_weighting_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_03-gravity_plot_inv_1c_gravity_anomaly_irls_compare_weighting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare weighting strategy with Inversion of surface Gravity Anomaly Data</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/tutorials/03-gravity/plot_1a_gravity_anomaly
   /content/tutorials/03-gravity/plot_1b_gravity_gradiometry
   /content/tutorials/03-gravity/plot_inv_1a_gravity_anomaly
   /content/tutorials/03-gravity/plot_inv_1b_gravity_anomaly_irls
   /content/tutorials/03-gravity/plot_inv_1c_gravity_anomaly_irls_compare_weighting


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: 03-gravity_python.zip </content/tutorials/03-gravity/03-gravity_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: 03-gravity_jupyter.zip </content/tutorials/03-gravity/03-gravity_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
